--- a/scss/global/_components.scss
+++ b/scss/global/_components.scss
@@ -66,7 +66,7 @@
     }
 }
 
-// testing
+// action boxes
 .collapsable {
 
     a {
@@ -76,6 +76,10 @@
         height: 0;
         display: flex;
         width: fit-content;
+
+        i {
+            margin-right: 5px;
+        }
     }
 
     details > summary {
