--- a/templates/item/item-gear-sheet.html
+++ b/templates/item/item-gear-sheet.html
@@ -1,16 +1,16 @@
-<form class="{{cssClass}}" autocomplete="off">
+<form class="{{cssClass}} {{item.type}} sheet" autocomplete="off">
   <header class="sheet-header">
     <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
     <div class="header-fields">
-      <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="Name"/></h1>
+      <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="{{localize "ATDC.item.name.placeholder"}}"/></h1>
       <div class="grid grid-2col">
         <div class="resource">
-          <label class="resource-label">Quantity</label>
-          <input type="text" name="system.quantity" value="{{system.quantity}}" data-dtype="Number"/>
+          <label class="resource-label">{{localize "ATDC.item.gear.tags.label"}}</label>
+          <input type="text" name="system.tags" value="{{system.tags}}" data-dtype="String"/>
         </div>
         <div class="resource">
-          <label class="resource-label">Weight</label>
-          <input type="text" name="system.weight" value="{{system.weight}}" data-dtype="Number"/>
+          <label class="resource-label">{{localize "ATDC.item.gear.load.label"}}</label>
+          <input type="text" name="system.load" value="{{system.load}}" data-dtype="Number"/>
         </div>
       </div>
     </div>
@@ -18,8 +18,7 @@
 
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
-    <a class="item" data-tab="description">Description</a>
-    <a class="item" data-tab="attributes">Attributes</a>
+    <a class="item" data-tab="description">{{localize "ATDC.item.description.label"}}</a>
   </nav>
 
   {{!-- Sheet Body --}}
@@ -27,17 +26,7 @@
 
     {{!-- Description Tab --}}
     <div class="tab" data-group="primary" data-tab="description">
-      {{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to the rollData prop. --}}
       {{editor system.description target="system.description" rollData=rollData button=true owner=owner editable=editable}}
-    </div>
-
-    {{!-- Attributes Tab --}}
-    <div class="tab attributes" data-group="primary" data-tab="attributes">
-      {{!-- As you add new fields, add them in here! --}}
-      <div class="resource">
-        <label class="resource-label">Roll Formula</label>
-        <input type="text" name="system.formula" value="{{system.formula}}" data-dtype="String"/>
-      </div>
     </div>
   </section>
 </form>
