seek releif update

--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -229,6 +229,11 @@ nav.sheet-tabs {
         padding: 2px;
         margin: 5px;
       }
+
+      .seek-relief-info {
+        font-size: 0.75em;
+        text-align: center;
+      }
     }
 
     .expertise-grid {
