--- a/templates/actor/parts/actor-main.html
+++ b/templates/actor/parts/actor-main.html
@@ -85,7 +85,6 @@
   </div>
 
   <div class="actions">
-    <!-- Testing collapsable things -->
     <div class="collapsable box">
       <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i>{{localize "ATDC.roll.label"}}</a>
       <details>
@@ -127,7 +126,7 @@
     </div>
 
     <hr>
-
+    <p class="seek-relief-info">{{localize "ATDC.actor.seekRelief.info"}}</p>
     <div class="collapsable box">
       <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i>{{localize "ATDC.roll.label"}}</a>
       <details>
