--- a/templates/actor/parts/actor-relationships.html
+++ b/templates/actor/parts/actor-relationships.html
@@ -1,3 +1,20 @@
-<div>
-  Relationships stuff goes here.
+<div class="relationships flexrow">
+  <div class="flexcol">
+    <div class="box">
+      <h3>Header</h3>
+      
+    </div>
+
+    <div class="box">
+      <h3>Header</h3>
+
+    </div>
+  </div>
+  
+  <div class="flexcol">
+    <div class="box">
+      <h3>Header</h3>
+      
+    </div>
+  </div>
 </div>
