starting on the relationships tab

--- a/templates/actor/parts/actor-relationships.html
+++ b/templates/actor/parts/actor-relationships.html
@@ -1,19 +1,19 @@
 <div class="relationships flexrow">
   <div class="flexcol">
     <div class="box">
-      <h3>Header</h3>
+      <h3>Your Anchor</h3>
       
     </div>
 
     <div class="box">
-      <h3>Header</h3>
+      <h3>Contacts</h3>
 
     </div>
   </div>
   
   <div class="flexcol">
     <div class="box">
-      <h3>Header</h3>
+      <h3>Team Members</h3>
       
     </div>
   </div>
