fixed contact lists

--- a/templates/actor/parts/actor-main.html
+++ b/templates/actor/parts/actor-main.html
@@ -56,11 +56,11 @@
       <p class="description">{{{localize 'ATDC.actor.gear.description'}}}</p>
       <ol class="items-list">
         <li class="item flexrow items-header">
-          <div class="item-name">Name</div>
-          <div class="item-tags">Tags</div>
-          <div class="item-load">Load</div>
+          <div class="item-name">{{localize "ATDC.item.gearList.name.label"}}</div>
+          <div class="item-tags">{{localize "ATDC.item.gearList.tags.label"}}</div>
+          <div class="item-load">{{localize "ATDC.item.gearList.load.label"}}</div>
           <div class="item-controls">
-            <a class="item-control item-create" title="Create item" data-type="gear"><i class="fas fa-plus"></i> Add item</a>
+            <a class="item-control item-create" title="Create item" data-type="gear"><i class="fas fa-plus"></i></a>
           </div>
         </li>
         {{#each gear as |item id|}}
