--- a/scss/components/_items.scss
+++ b/scss/components/_items.scss
@@ -58,7 +58,7 @@
   // Control Buttons
   .item-controls {
     display: flex;
-    flex: 0 0 75px;
+    flex: 0 0 46px;
     justify-content: flex-end;
     a {
       font-size: 12px;
@@ -125,23 +125,32 @@
 }
 
 .relationships {
+
+  .item-name {
+    flex: 1;
+    display: flex;
+  }
+
   .item-blown {
     flex: 0;
-    width: 50px;
-    padding: 0 8px;
+
+    input[type=checkbox] {
+      margin: 0 10px 0 10px;
+    } 
   }
   
   .item-expertise {
-    width: 100px;
-    padding: 0 8px;
+    flex: 1;
+    // width: 100px;
+    // padding: 0 8px;
   
     select {
-      width: 100px;
+      width: 100%;
     }
   }
 
   // Control Buttons
   .item-controls {
-    flex: 0 0 70px;
+    flex: 0 0 46px;
   }
 }
